--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,33 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  margin: 0;
+  height: 100%; /* Make body take full height of viewport */
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+  display: flex;
+  height: 100vh; /* Fill entire viewport */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+#configurator-model {
+  flex: 1; /* Take up remaining space */
+  background: #cfcfcf; /* Just for visibility, optional */
 }
 
-.card {
-  padding: 2em;
+#sidebar {
+  flex: 0 0 25%;
+  max-width: 400px;
+  min-width: 200px;
+  background: #ffffff; /* Optional: visual separation */
+  outline: 1px solid grey;
 }
 
-.read-the-docs {
-  color: #888;
+#sidebar h1 {
+  font-size: 16px;
+  margin: 0;
+  padding: 1rem;
+  border-bottom: 1px solid grey;
 }
