--- a/src/App.css
+++ b/src/App.css
@@ -2,44 +2,80 @@
   box-sizing: border-box;
 }
 
+:root {
+  font-family: "Inter";
+  line-height: 1.5;
+  font-weight: 400;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
 body {
   margin: 0;
   height: 100%;
+  font-family: Inter;
 }
 
 main {
-  display: flex;
   height: 100vh;
 }
 
 #configurator-model {
-  flex: 1;
   background: #cfcfcf;
+  height: 100%;
 }
 
 #sidebar {
-  flex: 0 0 25%;
+  position: absolute;
+  top: 0;
+  right: 0;
   background: #ffffff;
   outline: 1px solid grey;
+  margin: 20px;
+  min-width: 320px;
+  height: calc(100% - 40px);
+  border-radius: 8px;
+  box-shadow: -6px 12px 17.9px 0 rgba(0, 0, 0, 0.14);
+  overflow: auto;
 }
 
 #sidebar h1 {
-  font-size: 16px;
+  color: #000;
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: normal;
+  padding: 40px;
   margin: 0;
-  padding: 1rem;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid rgb(174, 174, 174);
+}
+
+.option-title {
+  color: #000;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin:0 0 16px 0;
+}
+
+
+.options-container {
+  padding: 40px;
 }
 
 /* Color options */
 
-#colors {
+#colors, #materials {
   display: flex;
-  gap: 1rem;
+  gap: 1.4rem;
   flex-wrap: wrap;
-  padding: 1rem;
 }
 
-#colors > div {
+#colors > div, #materials > div  {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,53 +88,4 @@ main {
   border: 1px solid #8d8d8d;
   margin-bottom: 0.5rem;
   cursor: pointer;
-}
-
-.circle-option.green {
-  background-color: green;
-}
-.circle-option.yellow {
-  background-color: yellow;
-}
-.circle-option.beige {
-  background-color: beige;
-}
-.circle-option.white {
-  background-color: white;
-}
-.circle-option.black {
-  background-color: black;
-}
-
-/* Material options */
-#materials {
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
-  padding: 1rem;
-}
-
-#materials > div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.material-option {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  border: 1px solid #8d8d8d;
-  margin-bottom: 0.5rem;
-  cursor: pointer;
-}
-
-.material-option.material1 {
-  background-color: rgb(235, 235, 108);
-}
-.material-option.material2 {
-  background-color: rgb(190, 249, 154);
-}
-.material-option.material3 {
-  background-color: rgb(151, 253, 255);
 }
