--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,8 @@ main {
   background: #ffffff;
   outline: 1px solid grey;
   margin: 20px;
-  min-width: 320px;
+  width: 400px;
+  max-width: 400px;
   height: calc(100% - 40px);
   border-radius: 8px;
   box-shadow: -6px 12px 17.9px 0 rgba(0, 0, 0, 0.14);
@@ -101,7 +102,7 @@ main {
 
 
 .options-container {
-  padding: 40px;
+  padding: 1.8rem;
 }
 
 .overviewList {
@@ -111,7 +112,7 @@ main {
 
 .overviewList li {
   border-bottom: 1px solid grey;
-  margin: 10px;
+  margin: 10px 0px;
 }
 
 .overviewList span {
